# ams.SupportDesk

./: .env.example  .gitignore  THoster ams.SupportDesk Tool Konzept vom 14.03.2026 (Link).md  docker-compose.yml  projectplan.md  readme.md  register-ams-supportdesk.json
backend/: Dockerfile  pyproject.toml
backend/ams-llm-sdk/: examples.py  pyproject.toml
backend/ams-llm-sdk/src/ams_llm/: __init__.py  client.py  models.py
backend/ams-thoster-sdk/: pyproject.toml
backend/ams-thoster-sdk/src/ams_thoster/: __init__.py  client.py  models.py  routes.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  app_setting.py  bewertung.py  chat_session.py  ki_nachricht.py  ki_recherche_verlauf.py  kunde.py  mcp_server_registry.py  nachricht.py  phasen_text.py  supporter.py  template.py  ticket.py  ticket_tag.py
backend/app/routers/: admin.py  chat_sessions.py  connections.py  eingangskorb.py  help.py  ki_recherche.py  kunden.py  kunden_portal.py  nachrichten.py  statistik.py  tags.py  tickets.py  ws.py
backend/app/schemas/: bewertung.py  chat_session.py  kunde.py  nachricht.py  supporter.py  ticket.py
backend/app/services/: connection_manager.py  connections_client.py  llm_router.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/admin/: AdminPage.tsx  KISettingsManager.tsx  MCPServerManager.tsx  ModelleManager.tsx  PhasenTexteManager.tsx  RAGCollectionManager.tsx  SettingsManager.tsx  TemplateManager.tsx
frontend/src/components/eingangskorb/: Eingangskorb.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts  useTickets.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/theme/: index.ts
mcp-server/: Dockerfile  pyproject.toml  server.py
(+25 files in other folders)
