[project]
name = "ams-supportdesk-backend"
version = "1.0.0"
description = "ams.SupportDesk Backend – KI-gestütztes Support-Tool"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0.37,<2.1",
    "asyncpg>=0.30,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "httpx>=0.28,<1.0",
    "redis>=5.2,<6.0",
    "python-multipart>=0.0.18,<1.0",
    "websockets>=14.0,<15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
